FIxed the overall spacing

--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,6 @@ body {
 }
 
 #pic {
-  /* Blog Image */
   width: 100%;
   height: 12.5rem;
   margin-bottom: 1.5rem;
@@ -43,18 +42,14 @@ body {
 }
 
 #content {
-  /* Content */
   width: 100%;
   height: 12.125rem;
-  /* Auto layout */
   gap: var(--spacing-150, 12);
 }
 
 #tag {
-  /* Category */
   width: 5.125rem;
   height: 1.8125rem;
-  /* Auto layout */
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -65,29 +60,20 @@ body {
 
   border-radius: 0.25rem;
   background: var(--color-yellow, rgba(244, 208, 78, 1));
-}
-#tag:hover {
-  background-color: black;
-}
 
-#tag p {
-  /* Learning */
-  width: 3.625rem;
-  height: 1.3125rem;
   color: var(--color-gray-950, rgba(17, 17, 17, 1));
-
   font-size: 0.88rem;
   font-weight: 800;
   line-height: 150%;
   letter-spacing: 0%;
   text-align: left;
 }
-#tag p:hover {
+#tag:hover {
+  background-color: black;
   color: var(--color-yellow, rgba(244, 208, 78, 1));
 }
 
 #date {
-  /* Publish Date */
   width: 8.9375rem;
   height: 1.3125rem;
   margin: 0.8rem 0;
@@ -131,7 +117,6 @@ h1:hover {
 }
 
 #profile {
-  /* Author */
   gap: var(--spacing-150, 0.75rem);
   margin: 1rem 0;
   width: 100%;
@@ -148,14 +133,12 @@ h1:hover {
 }
 
 #profile img {
-  /* userpic */
   width: 2rem;
   height: 2rem;
   flex: 0 0 2rem;
 }
 
 #profile figcaption {
-  /* authorname */
   color: var(--color-gray-950, rgba(17, 17, 17, 1));
 
   font-size: 0.875rem;
